# snipaste_keygen

./: README.md  device_id.py  main.py  writeup.md  授权方案分析.md
client/: Cargo.toml
client/src/: main.rs  utils.rs
keygen/: main.py
